replace yy's middleware 1.conf-common:ogging->logging,zookeeper:address 2.conf-db:datasource:username|password|url(useSSL=false) 3.conf-nakedb:url 4.redis:host,password,port 5.crazymaker-server:mysql驱动版本改为8.0.27和目标数据库一致。

--- a/cloud-center/cloud-config/src/main/resources/config/dev/crazymaker-common.yml
+++ b/cloud-center/cloud-config/src/main/resources/config/dev/crazymaker-common.yml
@@ -1,9 +1,9 @@
-ogging:
+logging:
   config: classpath:logback.xml
 multipart:
   maxFileSize: 128KB
   maxRequestSize: 128KBc
-  uploadTempDir: c:/upload/springboot/
+  uploadTempDir: d:/upload/springboot/
 spring:
   autoconfigure:
     exclude: org.springframework.boot.autoconfigure.web.servlet.MultipartAutoConfiguration
@@ -26,4 +26,5 @@ spring:
       max-request-size: '100Mb'
 
 zookeeper:
-  address: ${SCAFFOLD_ZOOKEEPER_HOSTS:127.0.0.1:2181}
+#  address: ${SCAFFOLD_ZOOKEEPER_HOSTS:127.0.0.1:2181}
+  address: ${SCAFFOLD_ZOOKEEPER_HOSTS:172.20.48.19:34990}
