--- a/cloud-center/cloud-config/src/main/resources/config/dev/crazymaker-nakedb.yml
+++ b/cloud-center/cloud-config/src/main/resources/config/dev/crazymaker-nakedb.yml
@@ -13,7 +13,7 @@ spring:
     testWhileIdle: true
     timeBetweenEvictionRunsMillis: 60000
     type: com.alibaba.druid.pool.DruidDataSource
-    url: jdbc:mysql://${DB_HOST:localhost}:3306/store?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false&zeroDateTimeBehavior=convertToNull
+    url: jdbc:mysql://${DB_HOST:172.20.47.142}:3306/xy_store?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false&zeroDateTimeBehavior=convertToNull
     username: root
     password: root
     validationQuery: SELECT 1 FROM DUAL
