--- a/pom.xml
+++ b/pom.xml
@@ -76,7 +76,8 @@
 
         <jedis.version>2.9.0</jedis.version>
         <commons-beanutils.version>1.9.3</commons-beanutils.version>
-        <mysql.connector.version>6.0.4</mysql.connector.version>
+<!--        <mysql.connector.version>6.0.4</mysql.connector.version>-->
+        <mysql.connector.version>8.0.27</mysql.connector.version>
         <mybatis-plus-boot-starter.version>3.2.0</mybatis-plus-boot-starter.version>
         <mybatis-spring-boot-starter.version>1.3.2</mybatis-spring-boot-starter.version>
         <velocity.version>1.7</velocity.version>
